; ModuleID = '/home/carl/AnghaBench/vlc/src/test/extr_interrupt.c_test_thread_simple.c'
source_filename = "/home/carl/AnghaBench/vlc/src/test/extr_interrupt.c_test_thread_simple.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sem = common dso_local global i32 0, align 4
@EINTR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @test_thread_simple to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @test_thread_simple(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to i32*
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @vlc_interrupt_set(i32* %6)
  %8 = call i64 @vlc_sem_wait_i11e(i32* @sem)
  %9 = load i64, i64* @EINTR, align 8
  %10 = icmp eq i64 %8, %9
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  %13 = call i64 @vlc_sem_wait_i11e(i32* @sem)
  %14 = icmp eq i64 %13, 0
  %15 = zext i1 %14 to i32
  %16 = call i32 @assert(i32 %15)
  %17 = call i32 @vlc_sem_wait(i32* @sem)
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @test_context_simple(i32* %18)
  ret i8* null
}

declare dso_local i32 @vlc_interrupt_set(i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @vlc_sem_wait_i11e(i32*) #1

declare dso_local i32 @vlc_sem_wait(i32*) #1

declare dso_local i32 @test_context_simple(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
